--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "emkademy"
+name = "mlops"
 version = "0.1.0"
 description = ""
-authors = ["Kıvanç Yüksel <emkademy@gmail.com>"]
+authors = ["Atul Sain <atulsain16111617@gmail@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
