--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,7 @@ readme = "README.md"
 python = ">=3.10,<3.11"
 hydra-core = "~=1.3.2"
 pydantic = "~=1.10.7"
-dvc
-dvc["gs"]
+dvc = "~=3.28.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "~=7.3"
