--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ python = ">=3.10,<3.11"
 hydra-core = "~=1.3.2"
 pydantic = "~=1.10.7"
 dvc = "~=3.28.0"
+google-auth = "^2.23.4"
+mlflow = "^2.8.0"
+google-auth-oauthlib = "^1.1.0"
+google-auth-httplib2 = "^0.1.1"
+google-cloud-storage = "^2.13.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "~=7.3"
