--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
         - USER_NAME=${USER_NAME}
     environment:
       - GOOGLE_APPLICATION_CREDENTIALS=/usr/local/gcloud/application_default_credentials.json
+      - HYDRA_FULL_ERROR=1
       # - GCLOUD_PROJECT=${GCLOUD_PROJECT}
     volumes:
       - ./app:/app/
