--- a/docker/Dockerfile.src
+++ b/docker/Dockerfile.src
@@ -45,6 +45,7 @@ USER root
 COPY ./docker/scripts/* /
 RUN chown -R ${USER_NAME} /*.sh && chmod +x /*.sh
 USER ${USER_NAME}
+RUN git config --global user.email "${USER_EMAIL}" && git config --global user.name "${USER_NAME}}"
 
 COPY . /app/
 ENTRYPOINT [ "/bin/sh", "-c", "tail -f /dev/null" ]
