--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = ">=3.10,<3.11"
 hydra-core = "~=1.3.2"
 pydantic = "~=1.10.7"
-dvc = "~=3.28.0"
+dvc = {extras = ["gs"], version = "^3.28.0"}
 google-auth = "^2.23.4"
 mlflow = "^2.8.0"
 google-auth-oauthlib = "^1.1.0"
